example-8/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: example-8
spec:
  ingressClassName: external-nginx
  rules:
    - host: www.cloudlabexperts.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
